@@ -8,6 +8,63 @@
 ##               (leaving out of fftempdir b/c parallel processes
 ##               access the object very easily)
 
+initializeBigMatrix <- function(name, nr, nc, vmode="integer"){
+  if(isPackageLoaded("ff")){
+    if(prod(nr, nc) > 2^31){
+      ##Need multiple matrices
+      ## -- use ffdf
+      ## How many samples per ff object
+      S <- floor(2^31/nr - 1)
+      ## How many ff objects
+      L <- ceiling(nc/S)
+      name <- paste(name, 1:L, sep="_")
+      resultsff <- vector("list", L)
+      for(i in 1:(L-1)){  ## the Lth object may have fewer than nc columns
+        resultsff[[i]] <- createFF(name=name[i],
+                                   dim=c(nr, S),
+                                   vmode=vmode)
+      }
+      ##the Lth element
+      leftOver <- nc - ((L-1)*S)
+      resultsff[[L]] <- createFF(name=name[L],
+                                 dim=c(nr, leftOver),
+                                 vmode=vmode)
+      resultsff[[L]][,] <- NA
+      results <- do.call(ffdf, resultsff)
+      rm(resultsff); gc()
+    } else {
+      results <- createFF(name=name,
+                          dim=c(nr, nc),
+                          vmode=vmode)
+      results[,] <- NA
+    }
+  }  else {
+    theNA <- switch(vmode,
+                    integer=NA_integer_,
+                    double=NA_real_,
+                    character=NA_character_,
+                    stop("Mode ", vmode, " not implemented for regular matrices"))
+    results <- matrix(theNA, nr, nc)
+  }
+  return(results)
+}
+
+initializeBigVector <- function(name, n, vmode="integer"){
+  if(isPackageLoaded("ff")){
+    results <- ff(vmode=vmode, length=n, pattern=file.path(ldPath(), basename(name)))
+  }  else {
+    theNA <- switch(vmode,
+                    integer=NA_integer_,
+                    double=NA_real_,
+                    character=NA_character_,
+                    stop("Mode ", vmode, " not implemented for regular matrices"))
+    results <- rep(theNA, n)
+  }
+  return(results)
+}
+
+
+
 createFF <- function(name, dim, vmode="double")
   ff(vmode=vmode, dim=dim, pattern=file.path(ldPath(), basename(name)))
 
